force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/Sentinel_Order_Field_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Sentinel Order Field Mapping</label>
</CustomObject>