force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/Field_Description__c.field-meta.xml
<CustomField>
    <fullName>Field_Description__c</fullName>
    <label>Field Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>