force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/IsCustomAttribute__c.field-meta.xml
<CustomField>
    <fullName>IsCustomAttribute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustomAttribute</label>
    <type>Checkbox</type>
</CustomField>