force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/Sentinel_Api_Field__c.field-meta.xml
<CustomField>
    <fullName>Sentinel_Api_Field__c</fullName>
    <label>Sentinel Api Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>