force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/Sentinel_Status_value__c.field-meta.xml
<CustomField>
    <fullName>Sentinel_Status_value__c</fullName>
    <label>Sentinel Status value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>