force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/SF_Api_Field__c.field-meta.xml
<CustomField>
    <fullName>SF_Api_Field__c</fullName>
    <label>SF Api Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>