force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/SF_orderfield_value__c.field-meta.xml
<CustomField>
    <fullName>SF_orderfield_value__c</fullName>
    <label>SF orderfield value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>