force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <label>sObjectName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>