force-app/main/default/objects/Sentinel_Order_Field_Mapping__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>